<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/obgc"
    tools:context="com.example.zhantuoer.ChangePasswordActivity">
    <TextView
        android:id="@+id/mrecText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="8%"
        android:text="@string/changepass"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        app:layout_marginBottomPercent="3%"
        app:layout_marginTopPercent="3%"
        android:textColor="#ffffff"
        />
    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="40%"
        app:layout_heightPercent="8%"
        android:text="@string/hintPhonenumber"
        android:textSize="20sp"
        android:textColor="#ffffff"
        app:layout_marginLeftPercent="3%"
        android:layout_alignBaseline="@+id/Phonenumber"
        android:layout_alignBottom="@+id/Phonenumber"
        android:layout_alignStart="@+id/identnumber" />
    <EditText
        android:id="@+id/Phonenumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="55%"
        app:layout_heightPercent="8%"
        app:layout_marginTopPercent="0.8%"
        app:layout_marginLeftPercent="38%"
        android:layout_below="@+id/mrecText"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:theme="@style/My_EditText"
        />
    <EditText
        android:id="@+id/identnumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="44%"
        app:layout_heightPercent="8%"
        app:layout_marginLeftPercent="6%"
        app:layout_marginTopPercent="6%"
        android:layout_below="@+id/Phonenumber"
        android:theme="@style/My_EditText"
        />
    <Button
        android:id="@+id/Receive_Ident"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="40%"
        app:layout_heightPercent="8%"
        android:layout_marginEnd="22dp"
        android:text="@string/Rec_Ident"
        android:textSize="17sp"
        android:layout_alignBottom="@+id/identnumber"
        android:layout_alignEnd="@+id/Phonenumber"
        android:background="@drawable/buttonstyle"
        android:textColor="#ffffff"/>
    <EditText
        android:id="@+id/Input_Change_Password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="90%"
        app:layout_heightPercent="8%"
        app:layout_marginTopPercent="1%"
        android:inputType="textPassword"
        android:hint="@string/hintinputpass"
        android:gravity="center"
        android:theme="@style/My_EditText"
        android:layout_below="@+id/identnumber"
        android:layout_alignStart="@+id/identnumber"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/Check_Change_Password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="90%"
        app:layout_heightPercent="8%"
        android:hint="@string/hintcheckpass"
        android:gravity="center"
        android:inputType="textPassword"
        app:layout_marginTopPercent="1%"
        android:layout_below="@+id/Input_Change_Password"
        android:theme="@style/My_EditText"
        android:layout_centerHorizontal="true"
        />
    <Button
        android:id="@+id/CheckIdent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="90%"
        app:layout_heightPercent="8%"
        android:text="@string/checkchange"
        android:textSize="20sp"
        android:background="@drawable/buttonstyle"
        app:layout_marginTopPercent="8%"
        android:layout_below="@+id/Check_Change_Password"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"/>
</android.support.percent.PercentRelativeLayout>
