<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zhantuoer.registerActivity">
    <android.support.percent.PercentRelativeLayout

        android:id="@+id/mview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="100%"
        android:background="@drawable/loginslide"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/mrText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="100%"
            app:layout_heightPercent="8%"
            android:text="@string/register"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            app:layout_marginTopPercent="2%"
            android:textColor="#ffffff"
            />
        <TextView
            android:textColor="#ffffff"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="40%"
            app:layout_heightPercent="8%"
            android:text="@string/country"
            android:textSize="23sp"
            android:gravity="center"
            app:layout_marginTopPercent="5%"
            android:id="@+id/textView2"
            android:layout_below="@+id/mrText"
            android:layout_alignStart="@+id/Radmin"
             />
        <TextView
            android:textColor="#ffffff"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="40%"
            app:layout_heightPercent="8%"
            android:text="@string/country1"
            android:textSize="23sp"
            android:gravity="center"
            app:layout_marginTopPercent="5%"
            android:id="@+id/textView"
            android:layout_above="@+id/Radmin"
            android:layout_alignEnd="@+id/Radmin"
            android:layout_toEndOf="@+id/textView2" />

        <EditText
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:id="@+id/Radmin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="60%"
            app:layout_heightPercent="10%"
            android:hint="@string/hintPhonenumber"
            android:inputType="number"
            android:gravity="center"
            android:maxLines="1"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/mregister"
            android:layout_alignEnd="@+id/mregister"
            android:theme="@style/My_EditText"/>

        <Button
            android:id="@+id/mregister"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_widthPercent="80%"
            app:layout_heightPercent="9%"
            app:layout_marginTopPercent="6%"
            android:text="@string/receive"
            android:textColor="#ffffff"
            android:textSize="23sp"
            android:background="@drawable/buttonstyle"
            android:layout_below="@+id/Radmin"
            android:layout_centerHorizontal="true" />
    </android.support.percent.PercentRelativeLayout>
</android.support.percent.PercentRelativeLayout>
