<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/obgc"
    tools:context="com.example.zhantuoer.ReceiveActivity">

    <TextView
        android:id="@+id/mrecText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="100%"
        app:layout_heightPercent="9%"
        android:text="@string/register"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_marginTopPercent="3%"
        app:layout_marginBottomPercent="3%"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="40%"
        app:layout_heightPercent="8%"
        android:text="@string/iden"
        android:textSize="17sp"
        android:textColor="#ffffff"
        app:layout_marginLeftPercent="3%"

        android:layout_alignBaseline="@+id/Phonenumber"
        android:layout_alignBottom="@+id/Phonenumber"
        android:layout_alignStart="@+id/identnumber" />
    <TextView
        android:id="@+id/Phonenumber"
        android:textSize="17sp"
        android:textColor="#eeeeee"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="55%"
        app:layout_heightPercent="8%"
        app:layout_marginTopPercent="0.8%"
        app:layout_marginLeftPercent="38%"
        android:layout_below="@+id/mrecText"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        />
    <EditText
        android:textColor="#ffffff"
        android:id="@+id/identnumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="45%"
        app:layout_heightPercent="8%"
        app:layout_marginLeftPercent="3%"
        app:layout_marginTopPercent="5%"
        android:layout_below="@+id/Phonenumber"
        android:theme="@style/My_EditText"
        />
    <Button
        android:id="@+id/receiveident"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="40%"
        app:layout_heightPercent="8%"
        android:text="@string/Reiden"
        android:textSize="17sp"
        android:textColor="#ffffff"
        android:background="@drawable/buttonstyle"
        android:layout_alignBaseline="@+id/identnumber"
        android:layout_alignBottom="@+id/identnumber"
        android:layout_toEndOf="@+id/identnumber"
        android:layout_marginStart="8dp" />
    <EditText
        android:textColor="#ffffff"
        android:id="@+id/InputPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="90%"
        app:layout_heightPercent="8%"
        app:layout_marginLeftPercent="3%"
        app:layout_marginTopPercent="1%"
        android:hint="@string/hintinputpass"
        android:inputType="textPassword"
        android:gravity="center"
        android:theme="@style/My_EditText"
        android:layout_above="@+id/CheckUserPassword"
        android:layout_alignStart="@+id/identnumber" />
    <EditText
        android:textColor="#ffffff"
        android:id="@+id/CheckUserPassword"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="90%"
        app:layout_heightPercent="8%"
        android:hint="@string/hintcheckpass"
        android:gravity="center"
        app:layout_marginTopPercent="1%"
        android:theme="@style/My_EditText"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/InputPassword" />
    <Button
        android:id="@+id/Submit_code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="90%"
        app:layout_heightPercent="8%"
        android:text="@string/checksubmit"
        android:textSize="20sp"
        android:background="@drawable/buttonstyle"
        app:layout_marginTopPercent="10%"
        android:layout_below="@+id/CheckUserPassword"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"/>
</android.support.percent.PercentRelativeLayout>
