<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.zhantuoer.LoginActivity"
    android:id="@+id/mview1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgc">
    <TextView
        android:gravity="center"
        android:id="@+id/Register0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="18%"
        app:layout_heightPercent="5%"
        android:text="@string/U_register"
        android:textSize="20sp"
        app:layout_marginRightPercent="4%"
        app:layout_marginTopPercent="4%"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />
    <EditText
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:id="@+id/admin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="83%"
        app:layout_heightPercent="9%"
        android:hint="@string/hintPhonePost"
        android:drawablePadding="78dp"
        android:background="@drawable/loginstyle"
        android:drawableStart="@drawable/ic_admin"
        android:paddingStart="15dp"
        android:maxLines="1"
        android:inputType="number"
        android:theme="@style/My_EditText"
        app:layout_marginTopPercent="15%"
        android:layout_below="@+id/Register0"
        android:layout_alignStart="@+id/mLogin" />
    <EditText
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="83%"
        app:layout_heightPercent="9%"
        android:hint="@string/pass"
        android:drawablePadding="90dp"
        android:inputType="textPassword"
        android:background="@drawable/loginstyle"
        android:drawableStart="@drawable/ic_password"
        android:paddingStart="15dp"
        android:maxLines="1"
        android:theme="@style/My_EditText"
        app:layout_marginTopPercent="4%"
        android:layout_below="@+id/admin"
        android:layout_alignStart="@+id/mLogin"
        android:layout_marginTop="27dp" />
    <Button
        android:id="@+id/mLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="83%"
        app:layout_heightPercent="9%"
        android:text="@string/Login"
        android:textColor="#ffffff"
        android:textSize="23sp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        app:layout_marginTopPercent="4%"
        android:background="@drawable/buttonstyle"/>
    <CheckBox
        android:id="@+id/vLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="自动登录"
        android:checked="true"
        app:layout_marginTopPercent="4%"
        android:button="@drawable/checkboxstyle"
        app:layout_marginLeftPercent="9%"
        android:layout_below="@+id/mLogin"
        android:layout_alignEnd="@+id/ForgetPass"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="23dp" />
    <CheckBox
        android:id="@+id/protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_marginTopPercent="4%"
        android:button="@drawable/checkboxstyle"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toStartOf="@+id/textView5" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="同意《用户协议》"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/textView5"
        android:layout_above="@+id/third_Text0"
        android:layout_alignEnd="@+id/mLogin" />
    <TextView
        android:id="@+id/ForgetPass"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="35%"
        app:layout_heightPercent="5%"
        android:text="@string/forgetpass"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"
        app:layout_marginTopPercent="4%"/>
    <View
        android:id="@+id/third_Text0"
        android:layout_below="@id/vLogin"
        android:layout_width="120dp"
        android:layout_marginTop="30dp"
        android:layout_height="0.8dp"
        android:layout_marginLeft="90dp"
        android:background="#d8d8d8"
        android:layout_alignLeft="@+id/textView"
        />
    <View
        android:id="@+id/third_Text1"
        android:layout_below="@id/vLogin"
        android:layout_width="120dp"
        android:layout_marginTop="30dp"
        android:layout_height="0.8dp"
        android:background="#d8d8d8"
        android:layout_alignRight="@+id/textView"
        android:layout_marginRight="90dp"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="25%"
        app:layout_heightPercent="5%"
        android:layout_marginTop="15dp"
        android:text="@string/quickLogin"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_below="@+id/vLogin"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_widthPercent="83%"
        app:layout_heightPercent="12%"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <View
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/ic_qq"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <View
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/ic_weixin"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <View
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/ic_weibo" />
        </LinearLayout>
    </LinearLayout>
</android.support.percent.PercentRelativeLayout>
